@@ -7,6 +7,7 @@
 - Allow arbitrarily large group statements
 - Fix logging of object trust
 - Correct denial accounting
+- Add new form of LD_PRELOAD pattern detection
 
 1.0
 - Add file size, IMA, and sha256 based integrity checking
